syntax = "proto3";

option java_multiple_files = true;
option java_package = "hengda.pitchfork";
option java_outer_classname = "ModelProto";

package model;

service Model {
    rpc list(ModelRequest) returns (ModelReply) {}
    rpc save(ModelRequest) returns (ModelReply) {}
    rpc get(ModelRequest) returns (ModelReply) {}
    rpc listAllSub(ModelRequest) returns (ModelReply) {}
    rpc listSub(ModelRequest) returns (ModelReply) {}
    rpc saveSub(ModelRequest) returns (ModelReply) {}
    rpc update(ModelRequest) returns (ModelReply) {}
    rpc remove(ModelRequest) returns (ModelReply) {}
}

message ModelRequest { string data = 1; }

message ModelReply { string data = 1; }
